; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/analogix/extr_analogix_dp_core.c_analogix_dp_hardirq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/analogix/extr_analogix_dp_core.c_analogix_dp_hardirq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.analogix_dp_device = type { i32 }

@IRQ_NONE = common dso_local global i32 0, align 4
@DP_IRQ_TYPE_UNKNOWN = common dso_local global i32 0, align 4
@IRQ_WAKE_THREAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @analogix_dp_hardirq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @analogix_dp_hardirq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.analogix_dp_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.analogix_dp_device*
  store %struct.analogix_dp_device* %9, %struct.analogix_dp_device** %5, align 8
  %10 = load i32, i32* @IRQ_NONE, align 4
  store i32 %10, i32* %6, align 4
  %11 = load %struct.analogix_dp_device*, %struct.analogix_dp_device** %5, align 8
  %12 = call i32 @analogix_dp_get_irq_type(%struct.analogix_dp_device* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @DP_IRQ_TYPE_UNKNOWN, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load %struct.analogix_dp_device*, %struct.analogix_dp_device** %5, align 8
  %18 = call i32 @analogix_dp_mute_hpd_interrupt(%struct.analogix_dp_device* %17)
  %19 = load i32, i32* @IRQ_WAKE_THREAD, align 4
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %16, %2
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i32 @analogix_dp_get_irq_type(%struct.analogix_dp_device*) #1

declare dso_local i32 @analogix_dp_mute_hpd_interrupt(%struct.analogix_dp_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
